force-app/main/default/objects/AV_Score__c/AV_Score__c.object-meta.xml
<CustomObject>
    <description>Objeto contiene información relativa al cálculo de scoring de las oportunidades según su recordtype, expectativa de venta y etapa</description>
    <label>Score</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AV_Score</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>