force-app/main/default/objects/AV_Score__c/fields/AV_Active__c.field-meta.xml
<CustomField>
    <fullName>AV_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determina si la tarea esta activa.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>