force-app/main/default/objects/AV_Score__c/fields/AV_EndValue__c.field-meta.xml
<CustomField>
    <fullName>AV_EndValue__c</fullName>
    <description>Campo para guardar el valor del rango final</description>
    <label>Valor Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>