force-app/main/default/objects/AV_Score__c/fields/AV_Object__c.field-meta.xml
<CustomField>
    <fullName>AV_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object</label>
    <type>TextArea</type>
</CustomField>