force-app/main/default/objects/AV_Score__c/fields/AV_Potencial__c.field-meta.xml
<CustomField>
    <fullName>AV_Potencial__c</fullName>
    <description>Potencial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Potencial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>