force-app/main/default/objects/AV_Score__c/fields/AV_RecordType__c.field-meta.xml
<CustomField>
    <fullName>AV_RecordType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RecordType</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>