force-app/main/default/objects/AV_Score__c/fields/AV_Score__c.field-meta.xml
<CustomField>
    <fullName>AV_Score__c</fullName>
    <description>Peso de la tarea</description>
    <label>Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>