force-app/main/default/objects/AV_Score__c/recordTypes/AV_SalesExpectancy.recordType-meta.xml
<RecordType>
    <fullName>AV_SalesExpectancy</fullName>
    <active>true</active>
    <label>SalesExpectancy</label>
</RecordType>