force-app/main/default/objects/AV_Score__c/recordTypes/AV_ScoringAccount.recordType-meta.xml
<RecordType>
    <fullName>AV_ScoringAccount</fullName>
    <active>true</active>
    <label>ScoringAccount</label>
</RecordType>