force-app/main/default/objects/AV_Score__c/recordTypes/AV_ScoringOpportunity.recordType-meta.xml
<RecordType>
    <fullName>AV_ScoringOpportunity</fullName>
    <active>true</active>
    <label>ScoringOpportunity</label>
</RecordType>