force-app/main/default/objects/AV_Score__c/recordTypes/AV_ScoringOpportunityRange.recordType-meta.xml
<RecordType>
    <fullName>AV_ScoringOpportunityRange</fullName>
    <active>true</active>
    <label>ScoringOpportunityRange</label>
</RecordType>