force-app/main/default/objects/AV_Score__c/recordTypes/AV_ScoringTask.recordType-meta.xml
<RecordType>
    <fullName>AV_ScoringTask</fullName>
    <active>true</active>
    <label>ScoringTask</label>
</RecordType>